{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 227,
  "lineage": "470b32aa-9eb9-3fc8-7a57-40e79f10c6d4",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:security-group/sg-099d40faec96fa486",
            "description": "Security group for private resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099d40faec96fa486",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "Allow internal VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from public SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0243060cb06ccf7a6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "production-private-sg",
            "name_prefix": "",
            "owner_id": "443370702909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production-private-sg"
            },
            "tags_all": {
              "Name": "production-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:security-group/sg-0243060cb06ccf7a6",
            "description": "Security group for public-facing resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0243060cb06ccf7a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP and HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "production-public-sg",
            "name_prefix": "",
            "owner_id": "443370702909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production-public-sg"
            },
            "tags_all": {
              "Name": "production-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbc1e528d009f3c6",
            "arn": "arn:aws:ec2:us-east-1:443370702909:elastic-ip/eipalloc-0dbc1e528d009f3c6",
            "association_id": "eipassoc-0ca47a98da6aa0c51",
            "domain": "vpc",
            "id": "eipalloc-0dbc1e528d009f3c6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03ae5fc8b4bfb62a5",
            "private_dns": "ip-192-168-1-11.ec2.internal",
            "private_ip": "192.168.1.11",
            "public_dns": "ec2-35-168-125-128.compute-1.amazonaws.com",
            "public_ip": "35.168.125.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-eip"
            },
            "tags_all": {
              "Name": "production-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:internet-gateway/igw-0073af3672fb97ee2",
            "id": "igw-0073af3672fb97ee2",
            "owner_id": "443370702909",
            "tags": {
              "Name": "production-internet-gateway"
            },
            "tags_all": {
              "Name": "production-internet-gateway"
            },
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbc1e528d009f3c6",
            "association_id": "eipassoc-0ca47a98da6aa0c51",
            "connectivity_type": "public",
            "id": "nat-06ff540c03e41727e",
            "network_interface_id": "eni-03ae5fc8b4bfb62a5",
            "private_ip": "192.168.1.11",
            "public_ip": "35.168.125.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a68fc51e6fc92687",
            "tags": {
              "Name": "production-nat-gateway"
            },
            "tags_all": {
              "Name": "production-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08e32da22977b052f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ff540c03e41727e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e32da22977b052f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074ac07bd335c1e8a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ff540c03e41727e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074ac07bd335c1e8a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0073af3672fb97ee2",
            "id": "r-rtb-0288754926fb6fe891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0288754926fb6fe89",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:route-table/rtb-08e32da22977b052f",
            "id": "rtb-08e32da22977b052f",
            "owner_id": "443370702909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ff540c03e41727e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-private-route-table-a"
            },
            "tags_all": {
              "Name": "production-private-route-table-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:route-table/rtb-074ac07bd335c1e8a",
            "id": "rtb-074ac07bd335c1e8a",
            "owner_id": "443370702909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ff540c03e41727e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-private-route-table-b"
            },
            "tags_all": {
              "Name": "production-private-route-table-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:route-table/rtb-0288754926fb6fe89",
            "id": "rtb-0288754926fb6fe89",
            "owner_id": "443370702909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0073af3672fb97ee2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-public-route-table"
            },
            "tags_all": {
              "Name": "production-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b11505c20f2c4e4",
            "route_table_id": "rtb-08e32da22977b052f",
            "subnet_id": "subnet-0fed824e5be5bae48"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8993a77ef4e00d5",
            "route_table_id": "rtb-074ac07bd335c1e8a",
            "subnet_id": "subnet-02bf6db1b5fbf396c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fc0af72338650da",
            "route_table_id": "rtb-0288754926fb6fe89",
            "subnet_id": "subnet-0a68fc51e6fc92687"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:subnet/subnet-0fed824e5be5bae48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fed824e5be5bae48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443370702909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-subnet-a"
            },
            "tags_all": {
              "Name": "production-private-subnet-a"
            },
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:subnet/subnet-02bf6db1b5fbf396c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bf6db1b5fbf396c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443370702909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-subnet-b"
            },
            "tags_all": {
              "Name": "production-private-subnet-b"
            },
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:subnet/subnet-0a68fc51e6fc92687",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a68fc51e6fc92687",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443370702909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-subnet"
            },
            "tags_all": {
              "Name": "production-public-subnet"
            },
            "vpc_id": "vpc-0e238d66eef5a51f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370702909:vpc/vpc-0e238d66eef5a51f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-005d65f9bfd77cd47",
            "default_route_table_id": "rtb-0462d1743e405ed40",
            "default_security_group_id": "sg-0863075f5614130c9",
            "dhcp_options_id": "dopt-046f3818669579db0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e238d66eef5a51f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0462d1743e405ed40",
            "owner_id": "443370702909",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}